--- a/src/views/layout/Home.fxml
+++ b/src/views/layout/Home.fxml
@@ -19,7 +19,7 @@
                <children>
                   <AnchorPane fx:id="pane" maxWidth="1200.0" minWidth="650.0" nodeOrientation="LEFT_TO_RIGHT" prefWidth="1000.0" style="-fx-background-color: #323232;">
                      <children>
-                        <AnchorPane layoutX="59.0" layoutY="122.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #212121;" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="680.0" AnchorPane.topAnchor="100.0">
+                        <AnchorPane layoutX="59.0" layoutY="122.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #212121; -fx-background-radius: 5;" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="680.0" AnchorPane.topAnchor="100.0">
                            <padding>
                               <Insets bottom="20.0" left="10.0" right="10.0" top="20.0" />
                            </padding>
